--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Traing data logging
+**/wandb/**
+**/.neptune/**
+**/tensorboard/**
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -41,6 +46,8 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .nox/
+codecov
+test-results.xml
 .coverage
 .coverage.*
 .cache
@@ -119,6 +126,9 @@ venv.bak/
 
 # mkdocs documentation
 /site
+
+# vim swap
+*.swp
 
 # mypy
 .mypy_cache/
